deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ironclad
  labels:
    app.kubernetes.io/name: ironclad-sentinel
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
